fix: fixed card-select item spacing and radius

--- a/src/assets/styles/components/_card-item.scss
+++ b/src/assets/styles/components/_card-item.scss
@@ -5,7 +5,7 @@
 
   --ds-card-item-bg: var(--ds-color-bg-container-light);
   --ds-card-item-padding: var(--ds-space-12) var(--ds-space-16);
-  --ds-card-item-border-radius: var(--ds-border-radius-lg);
+  --ds-card-item-border-radius: var(--ds-border-radius-2xl);
 
   --ds-card-item-image-width: var(--ds-size-40);
   --ds-card-item-image-height: var(--ds-size-28);
