--- a/src/assets/styles/components/_item-select.scss
+++ b/src/assets/styles/components/_item-select.scss
@@ -7,7 +7,7 @@
   --ds-item-select-bg-hover: var(--ds-color-bg-container-lighter);
   --ds-item-select-bg-active: var(--ds-color-bg-white);
   --ds-item-select-padding: var(--ds-space-12) var(--ds-space-16);
-  --ds-item-select-border-radius: var(--ds-border-radius-lg);
+  --ds-item-select-border-radius: var(--ds-border-radius-xl);
   --ds-item-select-border-color: var(--ds-color-border-tertiary);
   --ds-item-select-border-color-hover: var(--ds-color-border-tertiary);
   --ds-item-select-border-color-selected: var(--ds-color-border-brand);
